--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 ant==0.1.1
 astroid==2.4.2
+attrs==20.3.0
+iniconfig==1.1.1
 isort==5.7.0
 lazy-object-proxy==1.4.3
 libusb==1.0.23b7
 mccabe==0.6.1
 msgpack-python==0.5.6
 numpy==1.19.5
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pylint==2.6.0
+pyparsing==2.4.7
 pyserial==3.5
 PySimpleGUI==4.34.0
+pytest==6.2.2
 pyusb==1.1.1
 PyYAML==5.4.1
 six==1.15.0
