--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ant==0.1.1
 astroid==2.4.2
 attrs==20.3.0
+coverage==5.5
 iniconfig==1.1.1
 isort==5.7.0
 lazy-object-proxy==1.4.3
@@ -16,6 +17,7 @@ pyparsing==2.4.7
 pyserial==3.5
 PySimpleGUI==4.34.0
 pytest==6.2.2
+pytest-cov==2.11.1
 pyusb==1.1.1
 PyYAML==5.4.1
 six==1.15.0
