--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ isort==5.7.0
 lazy-object-proxy==1.4.3
 libusb==1.0.23b7
 mccabe==0.6.1
+mock==4.0.3
 msgpack-python==0.5.6
 numpy==1.19.5
 packaging==20.9
