--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 ant==0.1.1
 astroid==2.4.2
 attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
 coverage==5.5
+idna==2.10
 iniconfig==1.1.1
 isort==5.7.0
 lazy-object-proxy==1.4.3
 libusb==1.0.23b7
+Markdown==3.3.4
 mccabe==0.6.1
 mock==4.0.3
 msgpack-python==0.5.6
 numpy==1.19.5
+oauthlib==3.1.0
 packaging==20.9
 pluggy==0.13.1
 py==1.10.0
@@ -21,6 +26,10 @@ pytest==6.2.2
 pytest-cov==2.11.1
 pyusb==1.1.1
 PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
 six==1.15.0
 toml==0.10.2
+urllib3==1.26.4
+websocket-client==0.58.0
 wrapt==1.12.1
