continuing setuptools config, added tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pm-trainer
-version = 1.1.0
+version = 1.1.1
 author = Robert Ussery
 author_email = robert@ussery.info
 description = A simple bike trainer workout GUI
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/russery/pm-trainer/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GPL-3.0-or-later
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: OS Independent
 
 [options]
