removed local python-ant and made dependency on github fork

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39
+envlist = py{38} # Should work with any 3.7+, but tkinter dependency won't resolve with anything but 3.8
 isolated_build = True
 
 [testenv]
