--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,19 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
+install_requires =
+	ant
+    numpy
+	requests
+	PySimpleGUI
+	PyYAML
+    # Use this fork of ant to resolve issue with pyserial version:
+    ant @ git+https://github.com/russery/python-ant#egg=ant
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    pmtrainer = pm_trainer:main
