everything working with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,13 @@
 [tox]
 envlist = py{38} # Should work with any 3.7+, but tkinter dependency won't resolve with anything but 3.8
-isolated_build = True
 
 [testenv]
-deps = pytest
+deps =
+	pytest
+    numpy
+	requests
+	PySimpleGUI
+	PyYAML
+usedevelop = True
 commands =
     pytest
