fixed deps and entry point name

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    pmtrainer = pm_trainer:main
+    pmtrainer = pmtrainer.pm_trainer:main
