--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
-envlist = py{38} # Should work with any 3.7+, but tkinter dependency won't resolve with anything but 3.8
+envlist = py{38} # Should work with any 3.7+, but tkinter dependency won't resolve with anything but 3.8.2 on MacOS
 
 [testenv]
 deps =
 	pytest
-    numpy
-	requests
 	PySimpleGUI
-	PyYAML
 usedevelop = True
 commands =
     pytest
