abandoning pyinstaller and reverting to setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pm-trainer
-version = 1.1.1
+version = 1.0.1
 author = Robert Ussery
 author_email = robert@ussery.info
 description = A simple bike trainer workout GUI
@@ -25,7 +25,9 @@ install_requires =
 	PySimpleGUI
 	PyYAML
     # Use this fork of ant to resolve issue with pyserial version:
-    ant @ git+https://github.com/russery/python-ant#egg=ant
+    ant >= 0.2.0
+dependency_links =
+    https://github.com/russery/python-ant/releases/download/0.2.0/ant-0.2.0-py3.8.egg#egg=ant-0.2.0
 
 [options.packages.find]
 where = src
