--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,5 @@
-include pyproject.toml
-
 include *.md
-include LICENSE.txt
+include LICENSE
 include setup.py
 
 # Include the sample workouts directory:
